--- a/工作表.md
+++ b/工作表.md
@@ -1,10 +1,13 @@
-1
-场景缩放应该被摄像机的z位置影响
+1. 场景缩放应该被摄像机的z位置影响
 如果表现不好，就给摄像机添加新变量来影响地图缩放
 
-2地图编辑器
+2. 编辑器
+    - 地图编辑器
+    - actor编辑器
+    - actor浏览器
 
-3 碰撞
-4 ui
-5 网格 ok
-6 渲染应由windows调用cameraActive实现
+3.  碰撞
+4.  ui
+5.  网格 
+    - 优化为使用位运算取模，锁定编辑器网格选项
+6.  渲染应由windows调用cameraActive实现
